2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * AUTHORS: Translators named moved...
    * po/AUTHORS: ...here.
    * po/README: Ask translators to add their name to po/AUTHORS.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Trim leading and ending spaces in the
    searched word.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/utils.rb: Added Gtk::TreeModel#n_rows alias.
    * lib/fantasdic/ui/main_app.rb: Display the number of matches in the
    treeview instead of the total number of matches.
    * data/fantasdic/glade/main_app.glade: Sets "Matches" as the default string
    for the sidepane.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Make the ResultTextView grab the focus when
    definitions are added.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Some code cleanup (kill_lookup_thread).

2007-08-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: Added a HAVE_CONSOLE constant. This constant must be
    used to check that the console is available because rubyw can't use stdout,
    stderr, stdin.
    * bin/pre-setup.rb: Don't require gettext here but in lib/fantasdic.rb
    instead.

2007-08-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/ipc.rb: Moved IPC::send and IPC::find to IPC::Instance
    module. It makes more sense to use this namespace.
    * lib/fantasdic/ui.rb: Applied the necessary modifications to follow above
    change.
    * lib/fantasdic/ui/main_app.rb: Likewise.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/ipc.rb: Added an IPC backend using win32 named pipes
    thanks to win32/pipe from the win32-utils package. Three backends are
    now available:

    - Named pipes. This uses win32/pipe from the win32-utils package. This
    approach is preferred on win32.