@@ -1,5 +1,2 @@
-Main author:
-Mathieu Blondel <mblondel@cvs.gnome.org>
-
-Contributors:
+Mathieu Blondel <mblondel@cvs.gnome.org> (Main author)
 John Spray <spray@lyx.org>
